add firebase auth
